--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 .btn-send:active{ transform: translateY(1px); }
 
 /* ==== tiny badge “70” on the wood pill ==== */
-#userPill{ position:relative; }
+#userPill{ position:relative; overflow: visible; }
 .chat-badge{
-  position:absolute; top:-8px; right:-8px;
+  position:absolute; top:6px; right:8px; z-index: 3;
   min-width:22px; height:22px; padding:0 6px;
   border-radius:999px; display:flex; align-items:center; justify-content:center;
   background:#e11d48; color:#fff; font-weight:900; font-size:11px;
