--- a/index.html
+++ b/index.html
@@ -6,6 +6,84 @@
 <title>ChadiliZe — Telegram Mini App</title>
 <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <style>
+/* ---------- BUTTON UNDER CHAD BALANCE ---------- */
+.tt-btn {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: .5rem;
+  padding: .35rem .6rem;
+  border: 0;
+  background: transparent;
+  cursor: pointer;
+  border-radius: .5rem;
+}
+.tt-btn img {
+  display: block;
+  width: 140px; /* tune to your card width */
+  height: auto;
+  filter: drop-shadow(0 4px 10px rgba(0,0,0,.35));
+  transition: transform .15s ease, filter .15s ease;
+}
+.tt-btn:hover img { transform: translateY(-2px); filter: drop-shadow(0 10px 20px rgba(0,0,0,.35)); }
+
+/* ---------- FULLSCREEN OVERLAY ---------- */
+.tt-overlay[hidden] { display: none !important; }
+.tt-overlay {
+  position: fixed;
+  inset: 0;
+  z-index: 9999;
+  background: #0b0b10; /* letterbox around the canvas */
+  display: grid;
+  place-items: center;
+  user-select: none;
+}
+
+/* Keep canvas sized nicely and scale responsively */
+#ttCanvas {
+  width: min(96vw, 1280px);
+  height: calc(min(96vw, 1280px) * 9/16); /* lock 16:9 ratio */
+  background:
+    /* right-side range ticks (Apple Shooter vibe) */
+    linear-gradient(90deg, transparent 0 98%, rgba(200,200,200,.5) 98% 100%) right/4% 100% no-repeat,
+    #ffffff;
+  box-shadow: 0 20px 60px rgba(0,0,0,.45);
+  border-radius: 16px;
+}
+
+/* ---------- HUD ---------- */
+.tt-hud {
+  position: absolute;
+  inset: 1.2rem;
+  pointer-events: none;
+  display: flex;
+  justify-content: space-between;
+  font-family: system-ui, -apple-system, Segoe UI, Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+  font-weight: 700;
+  letter-spacing: .5px;
+}
+.tt-hud-left, .tt-hud-right { display: grid; gap: .4rem; color: #a9a9a9; font-size: clamp(16px, 1.6vw, 24px); }
+.tt-num { color: #4169e1; margin-left: .35rem; font-weight: 800; }
+
+/* Close and Main Menu */
+.tt-close {
+  position: absolute;
+  top: 12px; right: 18px;
+  width: 40px; height: 40px;
+  background: #222; color: #fff; border: 0; border-radius: 50%;
+  font-size: 26px; line-height: 40px; text-align: center; cursor: pointer;
+  box-shadow: 0 6px 20px rgba(0,0,0,.35);
+}
+.tt-mainmenu {
+  position: absolute;
+  left: 22px; bottom: 22px;
+  background: #efefef; color: #222;
+  border: 0; border-radius: 8px; padding: 10px 16px; font-weight: 800; cursor: pointer;
+  box-shadow: 0 6px 20px rgba(0,0,0,.25);
+}
+
+/* Accessibility focus */
+.tt-close:focus, .tt-mainmenu:focus, .tt-btn:focus { outline: 3px solid #84a9ff; outline-offset: 2px; }
 /* ==== Social Overlay (dark glass) ==== */
 .social-overlay{
   position:fixed; inset:0; z-index:9999;
@@ -1046,6 +1124,30 @@ canvas{ display:block }
     <span>Tap to play</span>
   </button>
 </div>
+<!-- ====== TOKEN TRIGGER BUTTON (place this under your Chad balance card) ====== -->
+<button id="tokenTriggerBtn" class="tt-btn" aria-label="Play Token Trigger">
+  <img src="/img/tokentrigger.png" alt="Token Trigger" />
+</button>
+
+<!-- ====== TOKEN TRIGGER GAME OVERLAY ====== -->
+<div id="tokenTrigger" class="tt-overlay" hidden>
+  <div class="tt-hud">
+    <div class="tt-hud-left">
+      <div class="tt-hud-row">ROUND: <span id="ttRound" class="tt-num">1</span></div>
+      <div class="tt-hud-row">DISTANCE: <span id="ttDistance" class="tt-num">20</span> FT.</div>
+    </div>
+    <div class="tt-hud-right">
+      <div class="tt-hud-row">SCORE: <span id="ttScore" class="tt-num">0</span></div>
+      <div class="tt-hud-row">CHADS: <span id="ttChadsEarned" class="tt-num">0</span></div>
+    </div>
+  </div>
+
+  <canvas id="ttCanvas" width="1280" height="720" aria-label="Token Trigger Game Area"></canvas>
+
+  <button id="ttClose" class="tt-close" aria-label="Close game">×</button>
+  <button id="ttMainMenu" class="tt-mainmenu" aria-label="Main menu">MAIN MENU</button>
+</div>
+
 
 <!-- Game overlay (opens only when you tap the button) -->
 <div id="cbOverlay" class="cb-overlay" aria-hidden="true">
@@ -2782,7 +2884,404 @@ function buildGrid(container, cols, rows){
   });
 })();
 
+(() => {
+  // ==============================
+  // TOKEN TRIGGER GAME (Apple Shooter-like)
+  // ==============================
 
+  // ---- Integration knobs ----
+  const CHADS_PER_SCORE = 100000;      // change this to tune payouts
+  const START_DISTANCE_FT = 20;        // initial distance shown in HUD
+  const DISTANCE_STEP_FT  = 5;         // how far the target moves each round
+  const FT_TO_PX          = 12;        // 1 ft = 12 px (visual scale)
+  const GRAVITY_PX_S2     = 980;       // ~9.8 m/s^2 → 980 px/s^2 at our scale
+
+  // Award chads into host app if possible
+  function awardChads(amount) {
+    try {
+      if (typeof window.addChads === 'function') {
+        window.addChads(amount);
+      } else {
+        // Fallback: try annotation [data-chad-balance]
+        const el = document.querySelector('[data-chad-balance]');
+        if (el) {
+          const num = parseFloat(String(el.textContent).replace(/[^\d.-]/g, '')) || 0;
+          el.textContent = (num + amount).toLocaleString();
+        }
+      }
+      window.dispatchEvent(new CustomEvent('chads:earned', { detail: amount }));
+    } catch (e) { console.warn('Token Trigger: awardChads fallback used.', e); }
+  }
+
+  // ---- Elements ----
+  const openBtn   = document.getElementById('tokenTriggerBtn');
+  const overlay   = document.getElementById('tokenTrigger');
+  const canvas    = document.getElementById('ttCanvas');
+  const ctx       = canvas.getContext('2d');
+  const closeBtn  = document.getElementById('ttClose');
+  const menuBtn   = document.getElementById('ttMainMenu');
+
+  const elRound   = document.getElementById('ttRound');
+  const elDist    = document.getElementById('ttDistance');
+  const elScore   = document.getElementById('ttScore');
+  const elChads   = document.getElementById('ttChadsEarned');
+
+  // Maintain internal payout tally to show in HUD this session
+  let chadsEarnedThisSession = 0;
+
+  // ---- Game state ----
+  const state = {
+    running: false,
+    round: 1,
+    distanceFt: START_DISTANCE_FT,
+    score: 0,
+    // world
+    timePrev: 0,
+    groundY: canvas.height - 100,
+    // archer
+    archer: { x: 120, y: canvas.height - 160, power: 0, aiming: false, angle: -0.4, charging: false },
+    // target (person + apple)
+    target: { baseX: canvas.width - 260, x: 0, y: 0, width: 42, height: 130, appleR: 12 },
+    // wall behind target
+    wall:   { x: canvas.width - 128, width: 64, blocks: 6, blockSize: 40 },
+    // arrow
+    arrow: null,
+    // particles
+    pops: []
+  };
+
+  function resizeCanvasToCSS() {
+    const rect = canvas.getBoundingClientRect();
+    const dpr = Math.min(window.devicePixelRatio || 1, 2);
+    const w = Math.floor(rect.width * dpr);
+    const h = Math.floor(rect.height * dpr);
+    if (canvas.width !== w || canvas.height !== h) {
+      canvas.width = w;
+      canvas.height = h;
+      state.groundY = h - 100 * dpr;
+      // keep proportions
+    }
+  }
+
+  // ---- Apple Shooter-style art helpers ----
+  function drawGround() {
+    // green gradient ground
+    const g = ctx.createLinearGradient(0, state.groundY - 40, 0, canvas.height);
+    g.addColorStop(0, '#7ee46f');
+    g.addColorStop(1, '#32c74c');
+    ctx.fillStyle = g;
+    ctx.fillRect(0, state.groundY, canvas.width, canvas.height - state.groundY);
+  }
+
+  function drawArcher() {
+    const { x, y } = state.archer;
+
+    // body
+    ctx.save();
+    ctx.translate(x, y);
+    // legs
+    ctx.fillStyle = '#d0d0d0';
+    ctx.fillRect(-18, 40, 12, 38);
+    ctx.fillRect(10, 42, 12, 38);
+    ctx.fillStyle = '#000';
+    ctx.fillRect(-20, 78, 20, 10);
+    ctx.fillRect(10, 80, 22, 10);
+    // torso
+    ctx.fillStyle = '#2f7ad7';
+    ctx.beginPath(); ctx.moveTo(-22, -20); ctx.quadraticCurveTo(0, -38, 22, -20); ctx.lineTo(18, 34); ctx.lineTo(-18, 34); ctx.closePath(); ctx.fill();
+    // arm bow hand
+    ctx.fillStyle = '#f0c49b';
+    ctx.fillRect(8, -8, 36, 10);
+    // bow
+    ctx.strokeStyle = '#d28e23'; ctx.lineWidth = 6;
+    ctx.beginPath(); ctx.moveTo(36, -38); ctx.quadraticCurveTo(56, 0, 36, 38); ctx.stroke();
+    // string
+    ctx.strokeStyle = '#111'; ctx.lineWidth = 2;
+    ctx.beginPath(); ctx.moveTo(36, -38); ctx.lineTo(36, 38); ctx.stroke();
+
+    // drawing arm (moves with power)
+    ctx.fillStyle = '#f0c49b';
+    ctx.fillRect(-30, -6, 36, 12);
+
+    // helmet + head
+    ctx.fillStyle = '#f7d45b'; ctx.beginPath(); ctx.ellipse(-10, -42, 18, 12, 0, 0, Math.PI * 2); ctx.fill();
+    ctx.fillStyle = '#f0c49b'; ctx.beginPath(); ctx.arc(-8, -32, 12, 0, Math.PI * 2); ctx.fill();
+    ctx.fillStyle = '#000'; ctx.fillRect(-14, -36, 12, 4);
+
+    ctx.restore();
+  }
+
+  function drawTarget() {
+    const t = state.target;
+    t.x = state.target.baseX;
+    t.y = state.groundY - t.height - 6;
+
+    // body
+    ctx.save();
+    ctx.translate(t.x, t.y);
+    ctx.fillStyle = '#2fa14f';
+    ctx.fillRect(0, 20, t.width, t.height - 20);
+    // head
+    ctx.fillStyle = '#c9966f';
+    ctx.beginPath(); ctx.arc(t.width/2, 10, 16, 0, Math.PI * 2); ctx.fill();
+    // nose
+    ctx.fillStyle = '#b07d58';
+    ctx.beginPath(); ctx.moveTo(t.width/2 + 12, 10); ctx.quadraticCurveTo(t.width/2 + 24, 14, t.width/2 + 8, 18); ctx.closePath(); ctx.fill();
+
+    // apple (a little glossy)
+    const ax = t.width/2, ay = -8;
+    ctx.translate(ax, ay);
+    const grd = ctx.createRadialGradient(-4, -6, 2, 0, 0, 16);
+    grd.addColorStop(0, '#ff7a7a');
+    grd.addColorStop(1, '#cc1c1c');
+    ctx.fillStyle = grd;
+    ctx.beginPath(); ctx.ellipse(0, 0, t.appleR*1.1, t.appleR*0.9, 0, 0, Math.PI*2); ctx.fill();
+    // leaf
+    ctx.fillStyle = '#36b24a';
+    ctx.beginPath(); ctx.ellipse(8, -t.appleR-6, 8, 5, -.6, 0, Math.PI*2); ctx.fill();
+    // stem
+    ctx.strokeStyle = '#6b3a1e'; ctx.lineWidth = 3;
+    ctx.beginPath(); ctx.moveTo(0, -t.appleR-2); ctx.lineTo(0, -t.appleR-10); ctx.stroke();
+    ctx.restore();
+
+    // wall blocks
+    const w = state.wall;
+    const bs = w.blockSize;
+    ctx.fillStyle = '#bdbdbd';
+    for (let i = 0; i < state.wall.blocks; i++) {
+      const by = state.groundY - (i+1)*bs;
+      ctx.fillRect(w.x, by, w.width, bs-4);
+      // seams
+      ctx.strokeStyle = '#9e9e9e'; ctx.strokeRect(w.x, by, w.width, bs-4);
+    }
+  }
+
+  function drawArrow(a) {
+    ctx.save();
+    ctx.translate(a.x, a.y);
+    ctx.rotate(Math.atan2(a.vy, a.vx));
+    ctx.fillStyle = '#cfcfcf';
+    ctx.fillRect(-20, -1.5, 40, 3);
+    ctx.fillStyle = '#8b5a2b';
+    ctx.fillRect(-24, -2.5, 4, 5);
+    ctx.fillStyle = '#d9d9d9';
+    ctx.beginPath(); ctx.moveTo(20, 0); ctx.lineTo(28, -3); ctx.lineTo(28, 3); ctx.closePath(); ctx.fill();
+    ctx.restore();
+  }
+
+  function addPop(x, y) {
+    for (let i = 0; i < 12; i++) {
+      state.pops.push({
+        x, y,
+        vx: (Math.random()*2 - 1) * 160,
+        vy: (Math.random()*2 - 1) * 160 - 60,
+        life: 0.8,
+        r: 3 + Math.random()*3
+      });
+    }
+  }
+  function drawPops(dt) {
+    for (let i = state.pops.length-1; i >= 0; i--) {
+      const p = state.pops[i];
+      p.life -= dt;
+      p.x += p.vx * dt;
+      p.y += p.vy * dt;
+      p.vy += GRAVITY_PX_S2 * 0.4 * dt;
+      if (p.life <= 0) { state.pops.splice(i,1); continue; }
+      ctx.fillStyle = 'rgba(204,28,28,' + Math.max(p.life,0) + ')';
+      ctx.beginPath(); ctx.arc(p.x, p.y, p.r, 0, Math.PI*2); ctx.fill();
+    }
+  }
+
+  // ---- Physics & collisions ----
+  function shootArrow(power, angle) {
+    const baseSpeed = 820; // px/s
+    state.arrow = {
+      x: state.archer.x + 60,
+      y: state.archer.y - 14,
+      vx: Math.cos(angle) * baseSpeed * power,
+      vy: Math.sin(angle) * baseSpeed * power,
+      flying: true,
+      hit: null // 'apple' | 'person' | 'wall' | 'ground'
+    };
+  }
+
+  function rectCircleHit(rx, ry, rw, rh, cx, cy, cr) {
+    // clamp point to rect and test distance
+    const nx = Math.max(rx, Math.min(cx, rx + rw));
+    const ny = Math.max(ry, Math.min(cy, ry + rh));
+    const dx = cx - nx, dy = cy - ny;
+    return dx*dx + dy*dy <= cr*cr;
+  }
+
+  function updateArrow(dt) {
+    const a = state.arrow;
+    if (!a || !a.flying) return;
+    a.x += a.vx * dt;
+    a.y += a.vy * dt;
+    a.vy += GRAVITY_PX_S2 * dt;
+
+    // Collide with ground
+    if (a.y >= state.groundY - 2) { a.y = state.groundY - 2; a.flying = false; a.hit = 'ground'; return; }
+
+    // Collide with wall
+    const w = state.wall;
+    if (a.x + 28 >= w.x && a.y >= state.groundY - w.blocks*w.blockSize) {
+      a.flying = false; a.hit = 'wall';
+      return;
+    }
+
+    // Collide with person
+    const t = state.target;
+    const rx = t.x, ry = t.y + 16, rw = t.width, rh = t.height - 16;
+    if (a.x > rx - 6 && a.x < rx + rw + 6 && a.y > ry && a.y < ry + rh) {
+      a.flying = false; a.hit = 'person';
+      return;
+    }
+
+    // Collide with apple (circle)
+    const acx = t.x + t.width/2, acy = t.y - 8;
+    if (rectCircleHit(acx - t.appleR, acy - t.appleR, t.appleR*2, t.appleR*2, a.x+22, a.y, 6)) {
+      a.flying = false; a.hit = 'apple';
+      addPop(acx, acy);
+      // score + payout
+      state.score += 1;
+      chadsEarnedThisSession += CHADS_PER_SCORE;
+      awardChads(CHADS_PER_SCORE);
+      // next round
+      setTimeout(nextRound, 450);
+    }
+  }
+
+  function nextRound() {
+    state.round += 1;
+    state.distanceFt += DISTANCE_STEP_FT;
+    state.target.baseX = canvas.width - (260 + (state.round-1)*FT_TO_PX*DISTANCE_STEP_FT*0.25);
+    // nudge wall with target
+    state.wall.x = Math.max(state.target.baseX + 110, canvas.width - 140);
+    state.arrow = null;
+    updateHUD();
+  }
+
+  // ---- Input (drag to aim & power) ----
+  let pointerId = null;
+
+  function startAim(e) {
+    if (pointerId !== null) return;
+    pointerId = (e.pointerId != null) ? e.pointerId : 1;
+    state.archer.charging = true;
+    state.archer.power = 0;
+    canvas.setPointerCapture(pointerId);
+  }
+  function moveAim(e) {
+    if (pointerId === null) return;
+    const rect = canvas.getBoundingClientRect();
+    const x = (e.clientX - rect.left) * (canvas.width / rect.width);
+    const y = (e.clientY - rect.top) * (canvas.height / rect.height);
+    const dx = x - (state.archer.x + 40);
+    const dy = y - (state.archer.y - 14);
+    state.archer.angle = Math.atan2(dy, dx);
+    // limit to forward hemisphere
+    if (state.archer.angle > -0.1) state.archer.angle = -0.1;
+    // power grows with drag distance
+    const drag = Math.min(Math.hypot(dx, dy) / 320, 1);
+    state.archer.power = drag;
+  }
+  function endAim() {
+    if (pointerId === null) return;
+    canvas.releasePointerCapture(pointerId);
+    pointerId = null;
+    if (state.archer.charging && state.archer.power > 0.08) {
+      shootArrow(state.archer.power, state.archer.angle);
+    }
+    state.archer.charging = false;
+    state.archer.power = 0;
+  }
+
+  // ---- HUD ----
+  function updateHUD() {
+    elRound.textContent = state.round;
+    elDist.textContent  = state.distanceFt;
+    elScore.textContent = state.score;
+    elChads.textContent = chadsEarnedThisSession.toLocaleString();
+  }
+
+  // ---- Game Loop ----
+  function frame(tms) {
+    if (!state.running) return;
+    const t = tms / 1000;
+    const dt = Math.min(0.033, state.timePrev ? (t - state.timePrev) : 0.016);
+    state.timePrev = t;
+
+    // clear
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    // background sky
+    ctx.fillStyle = '#ffffff';
+    ctx.fillRect(0, 0, canvas.width, canvas.height);
+
+    drawGround();
+    drawTarget();
+
+    // aiming guide
+    if (state.archer.charging) {
+      ctx.save();
+      ctx.globalAlpha = 0.2;
+      ctx.strokeStyle = '#333'; ctx.lineWidth = 4;
+      ctx.beginPath();
+      ctx.moveTo(state.archer.x + 40, state.archer.y - 14);
+      const lx = Math.cos(state.archer.angle) * (160 + state.archer.power*240);
+      const ly = Math.sin(state.archer.angle) * (160 + state.archer.power*240);
+      ctx.lineTo(state.archer.x + 40 + lx, state.archer.y - 14 + ly);
+      ctx.stroke();
+      ctx.restore();
+    }
+
+    drawArcher();
+
+    updateArrow(dt);
+    if (state.arrow) drawArrow(state.arrow);
+
+    drawPops(dt);
+
+    requestAnimationFrame(frame);
+  }
+
+  // ---- Open/Close wiring ----
+  function openGame() {
+    overlay.hidden = false;
+    chadsEarnedThisSession = 0;
+    // reset state
+    state.running = true;
+    state.timePrev = 0;
+    state.round = 1;
+    state.distanceFt = START_DISTANCE_FT;
+    state.score = 0;
+    state.target.baseX = canvas.width - 260;
+    state.wall.x = canvas.width - 128;
+    state.arrow = null;
+    resizeCanvasToCSS();
+    updateHUD();
+    requestAnimationFrame(frame);
+    // focus close for a11y
+    setTimeout(() => closeBtn.focus(), 0);
+  }
+  function closeGame() {
+    state.running = false;
+    overlay.hidden = true;
+  }
+
+  openBtn.addEventListener('click', openGame);
+  closeBtn.addEventListener('click', closeGame);
+  menuBtn.addEventListener('click', closeGame);
+  window.addEventListener('resize', resizeCanvasToCSS);
+
+  // Pointer controls
+  canvas.addEventListener('pointerdown', startAim);
+  canvas.addEventListener('pointermove', moveAim);
+  canvas.addEventListener('pointerup', endAim);
+  canvas.addEventListener('pointercancel', endAim);
+})();
 
 /* ===== Snake ===== */
 const snakeGridEl = document.getElementById('snakeGrid'); let S=null, sLoop=null;
