--- a/index.html
+++ b/index.html
@@ -1156,6 +1156,7 @@ canvas{ display:block }
   <!-- The same button you liked, still *below* the wood rectangle -->
   <button id="cryptoBreakBtn" class="crypto-btn" aria-label="Play Crypto Break">
     <img src="img/cryptobreak.png" alt="Crypto Break" />
+     <img id="tokenTriggerBtn" src="/img/tokentrigger.png" alt="Token Trigger" />
     <span>Tap to play</span>
   </button>
 </div>
