--- a/index.html
+++ b/index.html
@@ -1116,6 +1116,7 @@ canvas{ display:block }
     <span>Tap to play</span>
   </button>
 </div>
+<img id="tokenTriggerBtn" class="tt-btn-img" src="img/tokentrigger.png" alt="Token Trigger" width="64" height="64" />
 <!-- ===================== TOKEN TRIGGER OVERLAY ======================= -->
 <div id="ttOverlay" class="tt-overlay" aria-hidden="true">
   <!-- HUD (top) -->
