--- a/index.html
+++ b/index.html
@@ -1106,6 +1106,7 @@ canvas{ display:block }
     <span>Tap to play</span>
   </button>
 </div>
+<img id="tokenTriggerBtn" src="img/tokentrigger.png" alt="Token Trigger" width="72" height="72" loading="lazy">
 <!-- ===================== TOKEN TRIGGER OVERLAY ======================= -->
 <div id="ttOverlay" class="tt-overlay" aria-hidden="true">
   <!-- HUD (top) -->
