--- a/index.html
+++ b/index.html
@@ -1091,6 +1091,13 @@ canvas{ display:block }
         <div class="small">generation / hr: <span id="genRate">0</span></div>
       </div>
     </div>
+<!-- Token Trigger image button (place to the RIGHT of your existing Crypto Break button) -->
+<img id="tokenTriggerBtn"
+     class="tt-btn-img"
+     src="img/tokentrigger.png"
+     alt="Token Trigger"
+     width="56" height="56" loading="lazy" />
+
 <!-- Place this block where your wooden profile rectangle is rendered -->
 <div id="profileStrip">
   <div class="wood-card" id="woodCard"><!-- your profile/username card --></div>
