--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   box-shadow: inset 0 1px 0 rgba(255,255,255,.06), 0 4px 14px rgba(0,0,0,.35);
 }
 .tt-pill b{ color:#4aa5ff; font-weight:800; }
-.tt-pill.wide{ margin-left:6px; }
 
 .tt-close{
   margin-left:auto; width:40px; height:40px; border-radius:999px; border:none;
@@ -49,18 +48,24 @@
   background: #cfe1ff;
 }
 
-/* ===== Person-hit toast ============================================= */
-.tt-toast{
-  position:absolute; left:50%; top:50%;
-  transform:translate(-50%,-50%) scale(.9);
-  background:rgba(18,18,22,.92);
-  color:#fff; font-weight:900; letter-spacing:.3px;
-  padding:12px 16px; border-radius:14px;
-  box-shadow:0 12px 36px rgba(0,0,0,.55);
-  opacity:0; pointer-events:none;
-  transition:opacity .25s ease, transform .25s ease;
+/* ===== Dialog ======================================================== */
+.tt-dialog{ position:absolute; inset:0; display:none; align-items:center; justify-content:center; }
+.tt-dialog.show{ display:flex; }
+.tt-card{
+  width:86%; max-width:420px; background:linear-gradient(180deg,#1c1c20,#0e0e12);
+  border-radius:20px; padding:20px; color:#f1f2f6; text-align:center;
+  box-shadow: 0 18px 50px rgba(0,0,0,.55), inset 0 1px 0 rgba(255,255,255,.08);
 }
-.tt-toast.show{ opacity:1; transform:translate(-50%,-50%) scale(1); }
+.tt-card h3{ margin:6px 0 10px; font-size:22px; }
+.tt-earn{ opacity:.9; margin:4px 0 16px; }
+.tt-earn b{ color:#4aa5ff; }
+.tt-actions{ display:flex; gap:10px; justify-content:center; }
+.tt-primary, .tt-ghost{
+  padding:10px 14px; border-radius:12px; font-weight:800; cursor:pointer; border:none;
+}
+.tt-primary{ background:#4aa5ff; color:#0b0e12; }
+.tt-ghost{ background:transparent; color:#e8e8ef; border:1px solid rgba(255,255,255,.18); }
+.coin{ filter: drop-shadow(0 2px 6px rgba(255,203,0,.35)); }
 /* ==== Social Overlay (dark glass) ==== */
 .social-overlay{
   position:fixed; inset:0; z-index:9999;
@@ -1091,16 +1096,15 @@ canvas{ display:block }
         <div class="small">generation / hr: <span id="genRate">0</span></div>
       </div>
     </div>
+<!-- Place this block where your wooden profile rectangle is rendered -->
+<div id="profileStrip">
+  <div class="wood-card" id="woodCard"><!-- your profile/username card --></div>
 <!-- Token Trigger image button (place to the RIGHT of your existing Crypto Break button) -->
 <img id="tokenTriggerBtn"
      class="tt-btn-img"
      src="img/tokentrigger.png"
      alt="Token Trigger"
      width="56" height="56" loading="lazy" />
-
-<!-- Place this block where your wooden profile rectangle is rendered -->
-<div id="profileStrip">
-  <div class="wood-card" id="woodCard"><!-- your profile/username card --></div>
 <!-- ===================== TOKEN TRIGGER OVERLAY ======================= -->
 <div id="ttOverlay" class="tt-overlay" aria-hidden="true">
   <!-- HUD (top) -->
@@ -1126,8 +1130,17 @@ canvas{ display:block }
     <button class="tt-menu" id="ttMainMenu">MAIN MENU</button>
   </div>
 
-  <!-- Hit toast (shows when the person is hit) -->
-  <div id="ttHitToast" class="tt-toast" aria-hidden="true">Nice Shot 💥</div>
+  <!-- Result dialog (shown when the person is hit) -->
+  <div id="ttDialog" class="tt-dialog" role="dialog" aria-modal="true" aria-labelledby="ttDialogTitle">
+    <div class="tt-card">
+      <h3 id="ttDialogTitle">Nice Shot 💥</h3>
+      <p class="tt-earn">You earned <b id="ttEarned">0</b> <span class="coin">🪙</span> CHADs</p>
+      <div class="tt-actions">
+        <button id="ttQuit" class="tt-primary">Quit (receive chads)</button>
+        <button id="ttRetry" class="tt-ghost">Try again (no chads)</button>
+      </div>
+    </div>
+  </div>
 </div>
   <!-- The same button you liked, still *below* the wood rectangle -->
   <button id="cryptoBreakBtn" class="crypto-btn" aria-label="Play Crypto Break">
@@ -4426,48 +4439,60 @@ function openBreaker(){
 })();
 
 (() => {
-  const btn = document.getElementById('tokenTriggerBtn'); // <-- your image button
+  const btn = document.getElementById('tokenTriggerBtn'); // your golden image button
   const overlay = document.getElementById('ttOverlay');
   const canvas = document.getElementById('ttCanvas');
   const ctx = canvas.getContext('2d');
 
   const ui = {
-    round:  document.getElementById('ttRound'),
-    score:  document.getElementById('ttScore'),
-    chads:  document.getElementById('ttChads'),
-    dist:   document.getElementById('ttDist'),
-    best:   document.getElementById('ttBest'),
-    close:  document.getElementById('ttClose'),
-    main:   document.getElementById('ttMainMenu'),
-    toast:  document.getElementById('ttHitToast'),
+    round: document.getElementById('ttRound'),
+    score: document.getElementById('ttScore'),
+    chads: document.getElementById('ttChads'),
+    dist:  document.getElementById('ttDist'),
+    best:  document.getElementById('ttBest'),
+    close: document.getElementById('ttClose'),
+    main:  document.getElementById('ttMainMenu'),
+    dialog: document.getElementById('ttDialog'),
+    earned: document.getElementById('ttEarned'),
+    quit:   document.getElementById('ttQuit'),
+    retry:  document.getElementById('ttRetry'),
   };
 
-  /* ---------- constants ---------- */
   const W = canvas.width, H = canvas.height;
   const GROUND_Y = H - 160;
   const G = 1800;
 
   // camera
-  const cam = { s: 1, tx: 0, shake: 0 };
+  const cam = { s: 1, tx: 0 };
   const CAM_MARGIN = 140;
   const CAM_MIN_SCALE = 0.35;
 
   // visuals
-  const HEAD_R = 20, APPLE_R = 18;
+  const HEAD_R = 18, APPLE_R = 18;
 
-  // distance logic
-  const START_DIST = 280;
-  const STEP_DIST  = 140;
+  // distances
+  const START_DIST = 280;      // px
+  const STEP_DIST  = 140;      // px per round
 
   // hold-to-power tuning
-  const SPEED_MIN = 650;
-  const SPEED_RATE = 900;
-  const SPEED_BASE = 300;
-  const SPEED_CAP_BASE = 1800;
+  const SPEED_MIN = 650;       // px/s (tap)
+  const SPEED_RATE = 900;      // px/s gained per second held
+  const SPEED_BASE = 300;      // base
+  const SPEED_CAP_BASE = 1800; // grows with distance
   const SPEED_CAP_DIST_FACTOR = 0.5;
 
-  // persistence for "BEST"
+  // persistent best record
   const BEST_KEY = 'ttBestRound';
+
+  // helper to credit CHADs to main app (Snake-compatible)
+  function creditChads(n){
+    const credit = window.addChadsToBalance
+                || window.creditChadsToMainApp
+                || (window.state && window.refreshUI && window.saveStateLocal
+                    ? (amt)=>{ try{ window.state.chads += BigInt(amt); window.refreshUI(); window.saveStateLocal(window.state); }catch(_){ console.log('CHADs +', amt); } }
+                    : (amt)=>console.log('CHADs +', amt));
+    try { credit(n); } catch(e){ console.warn(e); }
+  }
 
   let raf, lastTS = 0, audioCtx;
   let game;
@@ -4476,14 +4501,14 @@ function openBreaker(){
     game = {
       round: 1,
       score: 0,
-      pendingChads: 0,
+      pendingChads: 0,      // NOT credited until Quit
       distanceFt: 0,
       wallX: 640,
       target: { x: 560, y: GROUND_Y - 20 },
       apple:  { x: 560, y: 0, r: APPLE_R, popped:false, vx:0, vy:0 },
       archer: { x: 0,   y: GROUND_Y - 20 },
-      arrow:  { x:0, y:0, vx:0, vy:0, rot:-Math.PI/10, flying:false, stuck:false },
-      state: 'aim',
+      arrow:  { x:0, y:0, vx:0, vy:0, rot:-Math.PI/10, flying:false },
+      state: 'aim', // 'aim' | 'flying' | 'resolve' | 'modal'
       parts: [],
       aim:   { angle:-Math.PI/10, charging:false, holdT:0, holdStart:0 }
     };
@@ -4513,7 +4538,6 @@ function openBreaker(){
     game.arrow.vx = game.arrow.vy = 0;
     game.arrow.rot = game.aim.angle;
     game.arrow.flying = false;
-    game.arrow.stuck = false;
 
     game.state = 'aim';
   }
@@ -4525,7 +4549,7 @@ function openBreaker(){
     ui.dist.textContent  = game.distanceFt;
   }
 
-  /* ==== Input (hold-to-power + aim by drag) ============================ */
+  // ==== Input (hold-to-power + aim by drag) ==============================
   function screenToWorld(sx, sy){ return { x:(sx - cam.tx)/cam.s, y: sy/cam.s }; }
   function getCanvasScreenPoint(e){
     const r = canvas.getBoundingClientRect();
@@ -4541,9 +4565,11 @@ function openBreaker(){
     if (game.state !== 'aim') return;
     const sp = getCanvasScreenPoint(e);
     const p = screenToWorld(sp.x, sp.y);
+    // start charging; allow angle adjustment while holding
     game.aim.charging = true;
     game.aim.holdT = 0;
     game.aim.holdStart = performance.now();
+    // set initial angle toward pointer
     const bowX = game.archer.x + 24, bowY = game.archer.y - 40;
     game.aim.angle = Math.atan2(p.y - bowY, p.x - bowX);
     e.preventDefault();
@@ -4557,7 +4583,7 @@ function openBreaker(){
   }
   function pointerUp(){
     if (!game.aim.charging || game.state !== 'aim') return;
-    game.aim.holdT = Math.min(2.2, (performance.now() - game.aim.holdStart)/1000);
+    game.aim.holdT = Math.min(2.2, (performance.now() - game.aim.holdStart)/1000); // clamp ~2.2s
     game.aim.charging = false;
     shootWithHold();
   }
@@ -4576,11 +4602,10 @@ function openBreaker(){
     game.arrow.vy = Math.sin(game.aim.angle) * speed;
     game.arrow.rot = game.aim.angle;
     game.arrow.flying = true;
-    game.arrow.stuck = false;
     game.state = 'flying';
   }
 
-  /* ==== Physics / update ============================================== */
+  // ==== Physics / update ================================================
   function update(dt){
     // particles
     game.parts = game.parts.filter(p => {
@@ -4601,9 +4626,6 @@ function openBreaker(){
       }
     }
 
-    // camera shake decay
-    if (cam.shake > 0) cam.shake = Math.max(0, cam.shake - dt*2.5);
-
     if (game.arrow.flying){
       game.arrow.vy += G*dt;
       game.arrow.x  += game.arrow.vx*dt;
@@ -4615,7 +4637,7 @@ function openBreaker(){
       }
 
       const hit = checkHit();
-      if (hit === 'apple')       resolveApple();
+      if (hit === 'apple')      resolveApple();
       else if (hit === 'person') resolvePersonHit();
       else if (hit === 'wall')   resolveMiss();
     }
@@ -4629,22 +4651,20 @@ function openBreaker(){
       return 'wall';
     }
 
-    // arrow tip
+    // tip
     const tipX = game.arrow.x + Math.cos(game.arrow.rot)*24;
     const tipY = game.arrow.y + Math.sin(game.arrow.rot)*24;
 
-    // apple (circle)
+    // apple
     const ax = game.apple.x, ay = game.apple.y, ar = APPLE_R + 3;
     const ad2 = (tipX-ax)*(tipX-ax) + (tipY-ay)*(tipY-ay);
     if (ad2 <= ar*ar) return 'apple';
 
-    // person — larger, more forgiving shapes
-    const head = {x: game.target.x, y: game.target.y - 54, r: HEAD_R + 4};
+    // head + torso (slightly generous to feel fair)
+    const head = {x: game.target.x, y: game.target.y - 54, r: HEAD_R + 2};
     const d2 = (tipX-head.x)**2 + (tipY-head.y)**2;
     if (d2 <= head.r*head.r) return 'person';
-
-    // torso + legs combined
-    const torso = {x: game.target.x-18, y: game.target.y-20, w: 36, h: 80};
+    const torso = {x: game.target.x-16, y: game.target.y-16, w: 32, h: 66};
     if (tipX > torso.x && tipX < torso.x+torso.w && tipY > torso.y && tipY < torso.y+torso.h) return 'person';
 
     return null;
@@ -4658,21 +4678,17 @@ function openBreaker(){
     playPing();
 
     game.score += 1;
-    game.pendingChads += 150; // 150 CHADs / score
-    // credit straight to wallet/balance if host provides a function
-    (window.addChadsToBalance ||
-     window.creditChadsToMainApp ||
-     (n => { if (window.state?.chads !== undefined) { state.chads += BigInt(n); window.refreshUI?.(); window.saveStateLocal?.(state); } else { console.log('CHAD +', n); } })
-    )(150);
-
+    game.pendingChads += 150; // accumulate; credited on Quit
     updateHUD();
 
     // next round
     setTimeout(()=>{
       game.round += 1;
+      // update best record
       const best = Math.max(Number(localStorage.getItem(BEST_KEY) || 1), game.round);
       localStorage.setItem(BEST_KEY, String(best));
       ui.best.textContent = best;
+
       positionForRound();
       updateHUD();
     }, 700);
@@ -4684,37 +4700,27 @@ function openBreaker(){
   }
 
   function resolvePersonHit(){
-    // stop the arrow and stick it in the body
     game.arrow.flying = false;
-    game.arrow.stuck = true;
-    game.arrow.vx = game.arrow.vy = 0;
-    game.state = 'resolve';
-
-    // tip position for blood burst
+    game.state = 'modal';
     const tipX = game.arrow.x + Math.cos(game.arrow.rot)*24;
     const tipY = game.arrow.y + Math.sin(game.arrow.rot)*24;
-
-    // particles
-    for (let i=0;i<48;i++){
+    for (let i=0;i<40;i++){
       game.parts.push({
         x: tipX, y: tipY,
-        vx: (Math.random()*450-225),
-        vy: (-Math.random()*600),
+        vx: (Math.random()*420-210),
+        vy: (-Math.random()*560),
         r: 2+Math.random()*2,
-        life: .7+Math.random()*.7
+        life: .6+Math.random()*.7
       });
     }
-
-    // shake + thud + toast
-    cam.shake = 0.35;
     playThud();
-    showToast('Nice Shot 💥');
-
-    // after a brief pause, allow aiming again
-    setTimeout(()=>{ game.state = 'aim'; }, 700);
+    setTimeout(()=>{
+      ui.earned.textContent = game.pendingChads;
+      ui.dialog.classList.add('show');
+    }, 320);
   }
 
-  /* ==== Camera fit ===================================================== */
+  // ==== Camera fit =======================================================
   function computeCamera(){
     const left  = Math.min(game.archer.x, game.target.x) - CAM_MARGIN;
     const right = Math.max(game.wallX + 40, game.target.x + 60) + CAM_MARGIN;
@@ -4726,13 +4732,9 @@ function openBreaker(){
 
     cam.s = s;
     cam.tx = W/2 - centerX * s;
-
-    if (cam.shake > 0){
-      cam.tx += (Math.random()-0.5)*12*cam.shake;
-    }
   }
 
-  /* ==== Render ========================================================= */
+  // ==== Render ===========================================================
   function draw(){
     ctx.setTransform(1,0,0,1,0,0);
     ctx.clearRect(0,0,W,H);
@@ -4752,14 +4754,26 @@ function openBreaker(){
     drawPerson(game.target.x, game.target.y);
     drawApple(game.apple);
 
-    // particles
+    // blood particles
     for (const p of game.parts){
       ctx.fillStyle = '#b70e1b';
       ctx.beginPath(); ctx.arc(p.x, p.y, p.r, 0, Math.PI*2); ctx.fill();
     }
 
-    // arrow (stick if body-hit)
+    // arrow (also visible while aiming)
     drawArrow();
+
+    // charge indicator while holding
+    if (game.state==='aim' && game.aim.charging){
+      const x = game.archer.x + 24, y = game.archer.y - 54;
+      const t = Math.min(1, game.aim.holdT / 2.2);
+      ctx.save();
+      ctx.globalAlpha = 0.9;
+      ctx.beginPath();
+      ctx.arc(x,y,14, -Math.PI/2, -Math.PI/2 + t*2*Math.PI);
+      ctx.strokeStyle = '#4aa5ff'; ctx.lineWidth = 4; ctx.stroke();
+      ctx.restore();
+    }
   }
 
   function drawHills(){
@@ -4834,9 +4848,9 @@ function openBreaker(){
 
   function drawArrow(){
     const a = game.arrow;
-    const drawX = (game.state==='aim' && !a.stuck) ? (game.archer.x+24) : a.x;
-    const drawY = (game.state==='aim' && !a.stuck) ? (game.archer.y-40) : a.y;
-    const rot  = (game.state==='aim' && !a.stuck) ? game.aim.angle : a.rot;
+    const drawX = game.state==='aim' ? (game.archer.x+24) : a.x;
+    const drawY = game.state==='aim' ? (game.archer.y-40) : a.y;
+    const rot  = game.state==='aim' ? game.aim.angle : a.rot;
 
     ctx.save();
     ctx.translate(drawX, drawY);
@@ -4873,21 +4887,13 @@ function openBreaker(){
     ctx.closePath(); ctx.fill();
   }
 
-  // toast
-  function showToast(text){
-    ui.toast.textContent = text;
-    ui.toast.classList.add('show');
-    ui.toast.setAttribute('aria-hidden','false');
-    setTimeout(()=>{ ui.toast.classList.remove('show'); ui.toast.setAttribute('aria-hidden','true'); }, 900);
-  }
-
-  // loop (requestAnimationFrame) ----------------------------------------
+  // loop
   function loop(ts){
     if (!lastTS) lastTS = ts;
     const dt = Math.min((ts - lastTS)/1000, 0.035);
     lastTS = ts;
 
-    // update charge timer while holding
+    // update hold timer (for charge ring)
     if (game.state==='aim' && game.aim.charging){
       game.aim.holdT = Math.min(2.2, (performance.now() - game.aim.holdStart)/1000);
     }
@@ -4895,10 +4901,10 @@ function openBreaker(){
     update(dt);
     draw();
 
-    raf = requestAnimationFrame(loop); // smooth game loop
+    raf = requestAnimationFrame(loop);
   }
 
-  // sfx (simple Web Audio beeps)
+  // sfx
   function playPing(){
     try{
       audioCtx = audioCtx || new (window.AudioContext || window.webkitAudioContext)();
@@ -4933,12 +4939,25 @@ function openBreaker(){
   function closeGame(){
     overlay.setAttribute('aria-hidden','true');
     cancelAnimationFrame(raf);
+    ui.dialog.classList.remove('show');
   }
 
-  // launch only from the tokenTrigger image
+  // only launch from the image itself
   btn && btn.addEventListener('click', openGame, {passive:true});
   ui.close.addEventListener('click', closeGame);
   ui.main.addEventListener('click', closeGame);
+
+  // dialog buttons
+  ui.quit.addEventListener('click', () => {
+    if (game.pendingChads > 0){ creditChads(game.pendingChads); }
+    closeGame();
+  });
+  ui.retry.addEventListener('click', () => {
+    // lose pending rewards and restart fresh
+    game.pendingChads = 0;
+    ui.dialog.classList.remove('show');
+    newGame();
+  });
 
   // canvas input
   canvas.addEventListener('mousedown', pointerDown);
