--- a/index.html
+++ b/index.html
@@ -1181,13 +1181,12 @@ canvas{ display:block }
   <button id="cryptoBreakBtn" class="crypto-btn" aria-label="Play Crypto Break">
     <img src="img/cryptobreak.png" alt="Crypto Break" />
     <span>Tap to play</span>
-  </button>
-<!-- Token Trigger image button (place to the RIGHT of your existing Crypto Break button) -->
-<img id="tokenTriggerBtn"
+  </button> <img id="tokenTriggerBtn"
      class="tt-btn-img"
      src="img/tokentrigger.png"
      alt="Token Trigger"
      width="90" height="90" loading="lazy" />
+
 </div>
 
 <!-- Game overlay (opens only when you tap the button) -->
